# py-vsva

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: prerelease.yml
docs/: index.html  pyvsva.html  search.js
docs/pyvsva/: config.html
pyvsva/: config.py
